--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .container{
     display: flex;
-    height: 90vh;
+    height: 93vh;
 }
 
 .left{
     width: 18%;
     background-color:rgb(255, 255, 255);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     border-right: 1px solid rgb(230, 230, 230);
     
 }
@@ -46,10 +47,10 @@
 .options{
   display : flex;
   align-items: center;
-  color:rgb(78, 82, 86);
+  color:rgb(104 110 116);
   font-size: 14px;
   font-weight: 500;
-  padding: 25px 0px 0 0;
+  padding: 22px 0px 0 0;
   margin-left: 25px;
 }
 .header{
@@ -95,7 +96,7 @@
 }
 .pp{
   color: rgb(118, 118, 118);
-  padding: 7px 0;
+  padding: 8px 0;
   margin-left: 20px;
   font-weight: 500;
 }
@@ -164,7 +165,7 @@
 }
 
 .ac1{
-  width: 30%;
+  width: 35%;
 }
 .ac2{
   width: 20%;
@@ -254,8 +255,9 @@
 .post-stats {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color:rgb(143, 143, 143);
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 500;
   border-bottom: 1px solid rgb(222, 222, 222);
   padding-bottom: 15px;
@@ -321,15 +323,17 @@
 }
 .tooltip {
   display: flex;
-  width: 50px;
+  width: 150px;
   justify-content: space-between;
+  align-items: center;
   position: absolute;
-  top: 144px;
-  left: 750px;
+  top: 160px;
+  left: 700px;
   background-color: white;
   border: 1px solid #dcdcdc;
-  padding: 10px 15px;
-  border-radius: 8px;
+  padding: 8px 15px 5px 15px;
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 .plus-icon{
   display: flex;
@@ -339,4 +343,76 @@
   font-size: 14px;
   cursor: pointer;
   margin-left: 10px;
+}
+.emojis{
+  font-size: 18px;
+}
+
+.rr{
+  border-left: 1px solid rgb(230, 230, 230);
+}
+.wg{
+  margin-top: 20px;
+  width: 75%;
+  border: 1px solid rgb(230, 230, 230);
+  background-color:#f9fafc;
+  border-radius: 10px;
+  margin-left: 20px;
+  padding: 15px;
+}
+.wgd{
+  justify-content: space-between;
+  font-size: 12px;
+  color:rgb(98, 98, 98);
+  font-weight: 700;
+}
+.flbr{
+  margin-top: 10px;
+  width: 100%;
+  height: 9px;
+  background-color: #ebedf0;
+  border-radius: 10px;
+}
+.hbr{
+  width: 70%;
+  height: 9px;
+  background-color: #0ba5ed;
+  border-radius: 10px;
+}
+.mu{
+  font-size: 12px;
+  color:rgb(121, 121, 121);
+  margin-top: 6px;
+  font-weight: 500;
+}
+.up{
+  font-size: 12px;
+  color:rgb(121, 121, 121);
+  border: 1px solid rgb(173, 173, 173);
+  border-radius: 40px;
+  padding: 8px 20px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+}
+
+.ai{
+  background-color: #ebe9fe;
+  border-radius: 40px;
+  padding: 8px 12px;
+  border-left: 1px solid rgb(230, 230, 230);
+  color: #7446ef;
+}
+
+.hover{
+  size: 20px;
+  border-radius: 40px;
+  padding: 5px 10px;
+  
+}
+.hover:hover{
+  background-color: #f3f2f8;
+  cursor: pointer;
 }
